--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1160,7 +1160,7 @@ input, select, textarea {
 			transition: transform 0.325s ease-in-out, filter 0.325s ease-in-out;
 			background-image: url("../../images/bg7.jpg");
 			background-position: center;
-			background-size: cover;
+			background-size: contain;
 			background-repeat: no-repeat;
 			z-index: 1;
 		}
