--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1139,14 +1139,14 @@ input, select, textarea {
 			-webkit-transition-delay: 0.75s;
 			-ms-transition-delay: 0.75s;
 			transition-delay: 0.75s;
-			background-image: linear-gradient(to top, rgba(19, 21, 25, 0.5), rgba(19, 21, 25, 0.5)), url("../../images/overlay.png");
-			background-size: auto,
- 256px 256px;
+			background-image: linear-gradient(to top, rgba(19, 21, 25, 0.4), rgba(19, 21, 25, 0.4)), url("../../images/bg7.jpg");
+			background-size: cover;
+			filter: blur(0.5rem);
 			background-position: center,
  center;
 			background-repeat: no-repeat,
  repeat;
-			z-index: 2;
+			z-index: -1;
 		}
 
 		#bg:after {
@@ -1158,7 +1158,7 @@ input, select, textarea {
 			-webkit-transition: -webkit-transform 0.325s ease-in-out, -webkit-filter 0.325s ease-in-out;
 			-ms-transition: -ms-transform 0.325s ease-in-out, -ms-filter 0.325s ease-in-out;
 			transition: transform 0.325s ease-in-out, filter 0.325s ease-in-out;
-			background-image: url("../../images/bg7.jpg");
+			background-image: linear-gradient(to top, rgba(19, 21, 25, 0.4), rgba(19, 21, 25, 0.4)), url("../../images/bg7.jpg");
 			background-position: center;
 			background-size: contain;
 			background-repeat: no-repeat;
